# SCOTS2FPGA

./: CMakeLists.txt  README.md
FPGA_files/dcdc_TUM/: bddWrapper_Wrapper.xml  new_converted.xpr
FPGA_files/dcdc_TUM/new_converted.hw/: new_converted.lpr
FPGA_files/dcdc_splitted/: DD_Wrapper.xml  dcdc_with_domain.xpr  verilog_controller.v
FPGA_files/dcdc_whole/: DD_Wrapper.vhd  DD_Wrapper.xml  dcdc.xpr  verilog_controller_whole.v
FPGA_files/vehicle_TUM/: o_Wrapper.vhd  out_Wrapper.vhd  vehicle_TUM.xpr  vehicle_controller.v
FPGA_files/vehicle_splitted/: DD_Wrapper.vhd  DD_Wrapper.xml  vehicle_with_domain.xpr
FPGA_files/vehicle_whole/: DD_Wrapper.xml  vehicle.xpr
LabVIEW examples/dcdc/: README.txt
LabVIEW examples/dcdc/1-dcdc_controller_myRIO_1/: 1-dcdc_controller_myRIO_1.lvproj  FPGA_controller.vi
LabVIEW examples/dcdc/2-dcdc_controller_loop_FPGA_myRIO_1/: 2-dcdc_controller_loop_FPGA_myRIO_1.lvproj  FPGA_controller.vi
LabVIEW examples/dcdc/3-dcdc_controller_loop_CPU_myRIO_1/: 3-dcdc_controller_loop_CPU_myRIO_1.lvproj  FPGA_controller.vi  loop.vi
LabVIEW examples/dcdc/4-dcdc_controller_TUM_myRIO_1/: 4-dcdc_controller_TUM_myRIO_1.lvlps  4-dcdc_controller_TUM_myRIO_1.lvproj  FPGA_controller.vi
LabVIEW examples/dcdc/dcdc_myRIO_2/: DCDC_Model.vi  FPGA_IO.vi  dcdc_myRIO_2.aliases  dcdc_myRIO_2.lvlps  dcdc_myRIO_2.lvproj  xygraph.vi  xygraph2.vi  xygraph4.vi
LabVIEW examples/dcdc/test - 1-dcdc_controller_myRIO_1/: FPGA_controller.vi  test - 1-dcdc_controller_myRIO_1.lvproj
LabVIEW examples/dcdc/test - 2-dcdc_controller_loop_FPGA_myRIO_1/: FPGA_controller.vi  test - 2-dcdc_controller_loop_FPGA_myRIO_1.lvlps  test - 2-dcdc_controller_loop_FPGA_myRIO_1.lvproj
LabVIEW examples/dcdc/test - 3-dcdc_controller_loop_CPU_myRIO_1/: FPGA_controller.vi  loop.vi  test - 3-dcdc_controller_loop_CPU_myRIO_1.lvlps  test - 3-dcdc_controller_loop_CPU_myRIO_1.lvproj
LabVIEW examples/dcdc/test - 4-dcdc_controller_TUM_myRIO_1/: FPGA_controller.vi  test - 4-dcdc_controller_TUM_myRIO_1.aliases  test - 4-dcdc_controller_TUM_myRIO_1.lvproj
LabVIEW examples/dcdc/test-dcdc_controller_myRIO_1 - copia/: 1-dcdc_controller_myRIO_1.lvlps  FPGA_controller.vi
LabVIEW examples/vehicle/1-vehicle_controller_myRIO_1/: 1-vehicle_controller_myRIO_1.aliases  1-vehicle_controller_myRIO_1.lvproj  FPGA_controller.vi  vehicle_controller_myRIO_1.lvproj
LabVIEW examples/vehicle/2-vehicle_controller_loop_FPGA_myRIO_1/: 2-vehicle_controller_loop_FPGA_myRIO_1.lvproj  FPGA_controller.vi
LabVIEW examples/vehicle/3-vehicle_controller_loop_CPU_myRIO_1/: 3-vehicle_controller_loop_CPU_myRIO_1.lvlps  3-vehicle_controller_loop_CPU_myRIO_1.lvproj  FPGA_controller.vi  loop.vi
LabVIEW examples/vehicle/4-vehicle_controller_TUM_myRIO_1/: 4-vehicle_controller_TUM_myRIO_1.lvlps  4-vehicle_controller_TUM_myRIO_1.lvproj  FPGA_controller.vi
LabVIEW examples/vehicle/test - 1-vehicle_controller_myRIO_1/: FPGA_controller.vi  test - 1-vehicle_controller_myRIO_1.lvproj
LabVIEW examples/vehicle/test - 2-vehicle_controller_loop_FPGA_myRIO_1/: FPGA_controller.vi  test - 2-vehicle_controller_loop_FPGA_myRIO_1.lvproj
LabVIEW examples/vehicle/test - 3-vehicle_controller_loop_CPU_myRIO_1/: FPGA_controller.vi  loop.vi  test - 3-vehicle_controller_loop_CPU_myRIO_1.lvlps  test - 3-vehicle_controller_loop_CPU_myRIO_1.lvproj
LabVIEW examples/vehicle/vehicle_myRIO_2/: FPGA_IO.vi  VEHICLE_Model.vi  obstacles.vi  vehicle_myRIO_2.aliases  vehicle_myRIO_2.lvlps  vehicle_myRIO_2.lvproj
Simulink models/dcdc/: DC.slx
Simulink models/dcdc/DC_niVeriStand_Linux_ARM_32_rtw/: DC.bat  DC.c  DC.d  DC.h  DC.mk  DC_ParametersReadme.txt  DC_PortsReadme.txt  DC_SignalsReadme.txt  DC_data.c  DC_data.d  DC_private.h  DC_types.h  buildInfo.mat  builtin_typeid_types.h  codedescriptor.dmr  compileInfo.mat  defines.txt  modelsources.txt  multiword_types.h  ni_modelframework.d  ni_modelframework.h  ni_pglobals.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.d  rt_nonfinite.h  rt_sim.d  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  zero_crossing_types.h
Simulink models/vehicle/: vehicle.slx
Simulink models/vehicle/vehicle_niVeriStand_Linux_ARM_32_rtw/: buildInfo.mat  builtin_typeid_types.h  codedescriptor.dmr  compileInfo.mat  defines.txt  modelsources.txt  multiword_types.h  ni_modelframework.c  ni_modelframework.d  ni_pglobals.h  (+28 more)
Source Files/examples/: 1-run.sh  2-determinize.sh  3-generate_blif.sh  4-verilog_and_wrapper.sh  5-generate_blif_whole.sh  6-verilog_and_wrapper_whole.sh
Source Files/ext/optdet/: CMakeLists.txt  ctrl_data.hh  graph_level.hh  greedy_optimizer.hh  input_ctrl_data.hh  input_output.hh  inputs_mgr.hh  linearizer.hh  lis_tool_params.hh  logger.hh  monitor.hh  scots_examples_helper.hh  scots_opt_det.hh  scots_split_det.hh  scots_to_svg.hh  space_tree.hh  states_mgr.hh  string_utils.hh
Source Files/src/: CMakeLists.txt  generate_blif_whole.cc  wrapper.cc  wrapper.hh
Source Files/src/templates/: template.vhd
examples/: 0-build.sh  1-run.sh  2-determinize.sh  3-generate_blif.sh  4-verilog_and_wrapper.sh  5-generate_blif_whole.sh  6-verilog_and_wrapper_whole.sh
ext/abc-master/: bdd_vehicle_h3.v
ext/cudd-3.0.0/: Makefile  config.status  libtool
ext/optdet/: bdd_decoder.hh  det_tool_params.hh  exceptions.hh  graph_node.hh  greedy_estimator.hh  scots_opt_lis.cc  scots_opt_lis.hh  scots_to_svg.cc  space_node.hh  space_node_leaf.hh  space_optimizer.hh  space_tree_bdd.hh  space_tree_sco.hh
src/: CMakeLists.txt  wrapper.hh
(+1064 files in other folders)
